<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.AddNewTaskActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="@color/purplePrimary"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/rectanglewithborders" />


        <LinearLayout
            android:id="@+id/linearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnMenu"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/btnvoltar" />

        </LinearLayout>

        <TextView
            android:id="@+id/textOla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textUsuario"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/adicionar"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/nova_tarefa"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/editAddTask_Title"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:layout_marginBottom="20dp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:background="@drawable/edittext_custom"
            android:fontFamily="@font/montserratmedium"
            android:hint="Titulo"
            android:padding="15dp"
            android:textColorHint="@color/cardview_dark_background" />


        <EditText
            android:id="@+id/editAddTask_Descricao"
            android:layout_width="330dp"
            android:layout_height="130dp"
            android:layout_below="@+id/editAddTask_Title"
            android:elevation="2dp"
            android:background="@drawable/edittext_custom"
            android:fontFamily="@font/montserratmedium"
            android:gravity="start"
            android:hint="Descrição"
            android:padding="10dp"
            android:textColorHint="@color/cardview_dark_background" />


        <EditText
            android:id="@+id/editTipo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editAddTask_Descricao"
            android:elevation="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_custom"
            android:fontFamily="@font/montserratmedium"
            android:hint="Tipo"
            android:padding="15dp"
            android:textColorHint="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/editData"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editAddTask_Descricao"
            android:elevation="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toRightOf="@+id/editTipo"
            android:fontFamily="@font/montserratmedium"
            android:hint="Data"
            android:textColorHint="@color/cardview_dark_background"
            android:background="@drawable/edittext_custom"
            android:padding="15dp" />

        <Button
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTipo"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_with_gradient"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/adicionar_ofaddtask"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:id="@+id/btnAddTask_AddTask"/>

    </RelativeLayout>
</LinearLayout>